[tm821/#229] Implement binary/base64 image storage/display logic
